# WhatCRM_API

./: README.md  db.py  main.py  pyproject.toml  sql_request.sql
